# Analog-Automagic-Layout

./: .gitignore  .gitmodules  Astar Path Algorithm.py  AstarPathAlgorithm.py  LICENSE  LP placement.py  LPplacement.py  LPplacementoutdated.py  Magic_component_parser.py  Magic_drawer.py  Magic_layout_creator.py  Main.py  Placement Astar test.py  Placement test.py  README.md  Result10v1.json  Result50CV3.json  Result75v1.json  ResultT75M2+2  SPICE_parser.py  SimplifyPath.py  TODO.md  TODO.txt  Transistor.py  circuit_components.py  components.json  constraints.txt  debug.lp  debug.mps  debug_cell_to_cell  edge length.py  horizontal_grid.csv  json_converter.py  magic_component_parser.py  magic_drawer.py  magic_example_format.txt  magic_layout_creator.py  main(outdated).py  main.py  profile_results  (+12 more)
Attempt 1 (Old)/: test.py
Attempt 1 (Old)/layout_creator/: cell.py  cktobject.py  design.py  device.py  point.py  port.py  rect.py  spiceparser.py  subckt.py
Attempt 1 (Old)/layout_creator/printer/: designprinter.py  (+1 more)
Attempt 1 (Old)/schematic_extractor/: cell_builder.py  magic.py  xschem.py
Results/: Result50CV2.json  Result50v1.json  ResultSim.json  ResultT10M10.json  ResultT50M10.json  ResultT75M10.json  ResultT75M2+2.json  ResultT75M2.json  ResultV2.json  ResultV21.json  ResultV21Mirrored4.json  ResultV21Mirrored5.json
Stuff for rl-baselines3-zoo/custom_envs/: __init__.py  load_trained_model.py  object_placement_v2.py
Stuff for rl-baselines3-zoo/hyperparams/: ppo.yml
astar/: a_star.py  a_star_test.py  local_astar_test.py
backup/: trace_backup.py
circuit/: circuit_components.py  circuit_spice_parser.py
connections/: connections.py
custom_placement_algorithm/: custom_placement_algorithm.py
docs/: Install SCIP suite with cmake on server.txt  TODO.md
draw_result/: draw.py
grid/: generate_grid.py
json_converter/: json_converter.py
json_tool/: HEIKAN_1.json  Result10.json  Result50CV3.json  Result75.json  ResultT75M2+2.json  ResultV21.json  TracesLO1 1.json  TracesLO1 10.json  TracesLO1 11.json  TracesLO1 12.json  TracesLO1 3.json  TracesLO1 4.json  TracesLO1 5.json  TracesLO1 6.json  TracesLO1 7.json  TracesLO1 8.json  TracesLO1 9.json  TracesLO1 bulk test.json  TracesLO1.json  circuit_wires.json  components.json  heiheihei.json  json_converter.py  test 4.json  test.json  test2 1.json  test2.json  test3.json
layout_creator/: cktinstance.py  cktobject.py  design.py  instance.py  layoutcell.py  text.py
layout_creator/printer/: magicprinter.py
linear_optimization/: linear_optimization_test.py
logger/: logger.conf  logger.py
magic/: magic_component_parser.py  magic_drawer.py  magic_layout_creator.py
misc/: TODO.txt  scraped_code.txt
ml_exploration/: Ideas.txt  dqn_learning_example.py  ml_exploration.py  ml_flower_example.py  object_placement.py
outdated/: LPplacement.py  LPplacementoutdated.py  Simulated anealing 2.py  Simulated annealing.py  a_star.py  backup_a_star_test.py  linear_optimization.py  linear_optimization_test2.py  local_astar_test.py  main(outdated).py
path/: Intersection.py  a_star.py  edge_length.py  simplify_path.py
schematic_extractor/: xschem.py
src/: main.py  ste_calc.py  test.py
src/Analog_Automagic_Layout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/astar/: .nfs0000000004a2c8fb00010e88  .nfs00000000076a58e400010e7c  a_star.c  a_star.py  a_star.pyx  a_star_initiator.py  a_star_sparse.py  a_star_temp.py  a_star_test.py  a_start.py  astar.c  setup.py
src/cell/: cell_creator.py
src/circuit/: circuit_components.py  circuit_spice_parser.py
src/connections/: connections.py
src/cython_test/: cython_test.py  example.c  example.pyx
src/cython_test_2/: cython_print_test.c  cython_print_test.pyx  run_cython_test.py  setup.py
src/draw_result/: draw.py  visualize_grid.py
src/drc/: drc_checker.py  drc_checking.py  log_drc_info.tcl
src/grid/: generate_grid.py
src/json_converter/: components.json  components_COMPLETED.json  components_comp2.json  components_complete.json  components_digital_test.json  components_double_ota.json  components_for_comp_circuit 1.json  components_for_comp_circuit_lvs_clean.json  components_for_comp_circuit_test1.json  components_multiple_cell_test.json  components_multiple_cell_test_1.json  components_temp_before_cell_creator.json  components_test.json  components_w3.json  components_with_traces_update_1.json  fix_missing_rail_and_tap_in_this_layout.json  json_converter.py
src/json_tool/: components.json  json_converter.py
src/libraries/: aal_misc_lib.py  aal_misc_sky130a_lib.py  atr_lib.py  atr_sky130a_lib.py  library_handling.py  tr_lib.py  tr_sky130a_lib.py
src/linear_optimization/: initiator_lp.py  linear_optimization.py  previous_placement_solution.pkl
src/logger/: logger.py
src/lvs/: lvs_checker.py
src/magic/: magic_component_parser.py  magic_drawer.py  magic_layout_creator.py
src/milp_test/: obj_placement.py  test.py
src/outdated/: old_connections.py  old_trace_generate.py
src/results/: Comparator_OTA_complete_generation_data 5.json  Comparator_OTA_complete_generation_data.json  Comparator_OTA_complete_generation_data_2.json  Comparator_OTA_complete_generation_data_3.json  Comparator_OTA_complete_generation_data_6.json  Completed.json  Components.json  Components_Placement.json  Full_Run_test.json  Full_test.json  Full_test_2.json  Full_test_nodescale.json  Full_test_traces.json  Full_test_traces_2.json  Full_test_traces_3.json  Full_test_traces_4.json  Only_placement.json  Partial_comp.json  SpeedTest.json  complete_component_info.json  complete_component_info_complete_sens.json  components.json  components_before_cell_creator.json  partial.json  temp_components_before_cell_creator.json
src/test/: test.py
src/traces/: generate_astar_path_traces.py  generate_rail_traces.py  trace_generate.py  trace_generator.py  write_trace.py
src/utils/: input_log.txt  latex_formated_log.txt  layout_to_svg.py  log_to_latex_formatter.py
traces/: write_trace.py  write_trace_test.py  write_traces.py
utilities/: utilities.py
xsch/: JNW_BKLE.spice
(+490 files in other folders)
